[FIX] color button-collapse

--- a/css/app.css
+++ b/css/app.css
@@ -1366,7 +1366,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-lighten-5, header .navbar-fixed nav ul a.text-lighten-5, header .navbar-fixed nav .text-lighten-5.brand-logo {
+.green-text.text-lighten-5, header .navbar-fixed nav ul a.text-lighten-5, header .navbar-fixed nav .text-lighten-5.brand-logo, header .navbar-fixed nav .text-lighten-5.button-collapse {
   color: #E8F5E9 !important;
 }
 
@@ -1376,7 +1376,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-lighten-4, header .navbar-fixed nav ul a.text-lighten-4, header .navbar-fixed nav .text-lighten-4.brand-logo {
+.green-text.text-lighten-4, header .navbar-fixed nav ul a.text-lighten-4, header .navbar-fixed nav .text-lighten-4.brand-logo, header .navbar-fixed nav .text-lighten-4.button-collapse {
   color: #C8E6C9 !important;
 }
 
@@ -1386,7 +1386,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-lighten-3, header .navbar-fixed nav ul a.text-lighten-3, header .navbar-fixed nav .text-lighten-3.brand-logo {
+.green-text.text-lighten-3, header .navbar-fixed nav ul a.text-lighten-3, header .navbar-fixed nav .text-lighten-3.brand-logo, header .navbar-fixed nav .text-lighten-3.button-collapse {
   color: #A5D6A7 !important;
 }
 
@@ -1396,7 +1396,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-lighten-2, header .navbar-fixed nav ul a.text-lighten-2, header .navbar-fixed nav .text-lighten-2.brand-logo {
+.green-text.text-lighten-2, header .navbar-fixed nav ul a.text-lighten-2, header .navbar-fixed nav .text-lighten-2.brand-logo, header .navbar-fixed nav .text-lighten-2.button-collapse {
   color: #81C784 !important;
 }
 
@@ -1406,7 +1406,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-lighten-1, header .navbar-fixed nav ul a.text-lighten-1, header .navbar-fixed nav .text-lighten-1.brand-logo {
+.green-text.text-lighten-1, header .navbar-fixed nav ul a.text-lighten-1, header .navbar-fixed nav .text-lighten-1.brand-logo, header .navbar-fixed nav .text-lighten-1.button-collapse {
   color: #66BB6A !important;
 }
 
@@ -1416,7 +1416,7 @@
 }
 
 /* line 373, ../bower_components/materialize/sass/components/_color.scss */
-.green-text, header .navbar-fixed nav ul a, header .navbar-fixed nav .brand-logo {
+.green-text, header .navbar-fixed nav ul a, header .navbar-fixed nav .brand-logo, header .navbar-fixed nav .button-collapse {
   color: #4CAF50 !important;
 }
 
@@ -1426,7 +1426,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-darken-1, header .navbar-fixed nav ul a.text-darken-1, header .navbar-fixed nav .text-darken-1.brand-logo {
+.green-text.text-darken-1, header .navbar-fixed nav ul a.text-darken-1, header .navbar-fixed nav .text-darken-1.brand-logo, header .navbar-fixed nav .text-darken-1.button-collapse {
   color: #43A047 !important;
 }
 
@@ -1436,7 +1436,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-darken-2, header .navbar-fixed nav ul a.text-darken-2, header .navbar-fixed nav .text-darken-2.brand-logo {
+.green-text.text-darken-2, header .navbar-fixed nav ul a.text-darken-2, header .navbar-fixed nav .text-darken-2.brand-logo, header .navbar-fixed nav .text-darken-2.button-collapse {
   color: #388E3C !important;
 }
 
@@ -1446,7 +1446,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-darken-3, header .navbar-fixed nav ul a.text-darken-3, header .navbar-fixed nav .text-darken-3.brand-logo {
+.green-text.text-darken-3, header .navbar-fixed nav ul a.text-darken-3, header .navbar-fixed nav .text-darken-3.brand-logo, header .navbar-fixed nav .text-darken-3.button-collapse {
   color: #2E7D32 !important;
 }
 
@@ -1456,7 +1456,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-darken-4, header .navbar-fixed nav ul a.text-darken-4, header .navbar-fixed nav .text-darken-4.brand-logo {
+.green-text.text-darken-4, header .navbar-fixed nav ul a.text-darken-4, header .navbar-fixed nav .text-darken-4.brand-logo, header .navbar-fixed nav .text-darken-4.button-collapse {
   color: #1B5E20 !important;
 }
 
@@ -1466,7 +1466,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-accent-1, header .navbar-fixed nav ul a.text-accent-1, header .navbar-fixed nav .text-accent-1.brand-logo {
+.green-text.text-accent-1, header .navbar-fixed nav ul a.text-accent-1, header .navbar-fixed nav .text-accent-1.brand-logo, header .navbar-fixed nav .text-accent-1.button-collapse {
   color: #B9F6CA !important;
 }
 
@@ -1476,7 +1476,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-accent-2, header .navbar-fixed nav ul a.text-accent-2, header .navbar-fixed nav .text-accent-2.brand-logo {
+.green-text.text-accent-2, header .navbar-fixed nav ul a.text-accent-2, header .navbar-fixed nav .text-accent-2.brand-logo, header .navbar-fixed nav .text-accent-2.button-collapse {
   color: #69F0AE !important;
 }
 
@@ -1486,7 +1486,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-accent-3, header .navbar-fixed nav ul a.text-accent-3, header .navbar-fixed nav .text-accent-3.brand-logo {
+.green-text.text-accent-3, header .navbar-fixed nav ul a.text-accent-3, header .navbar-fixed nav .text-accent-3.brand-logo, header .navbar-fixed nav .text-accent-3.button-collapse {
   color: #00E676 !important;
 }
 
@@ -1496,7 +1496,7 @@
 }
 
 /* line 381, ../bower_components/materialize/sass/components/_color.scss */
-.green-text.text-accent-4, header .navbar-fixed nav ul a.text-accent-4, header .navbar-fixed nav .text-accent-4.brand-logo {
+.green-text.text-accent-4, header .navbar-fixed nav ul a.text-accent-4, header .navbar-fixed nav .text-accent-4.brand-logo, header .navbar-fixed nav .text-accent-4.button-collapse {
   color: #00C853 !important;
 }
 
@@ -16201,11 +16201,7 @@ header .navbar-fixed nav .brand-logo {
 header .navbar-fixed nav .brand-logo .bold {
   font-family: 'Roboto';
 }
-/* line 29, ../scss/_navbar.scss */
-header .navbar-fixed nav .button-collapse {
-  color: #26a69a;
-}
-/* line 38, ../scss/_navbar.scss */
+/* line 33, ../scss/_navbar.scss */
 header .navbar-fixed nav .nav-mobile {
   z-index: 998;
 }
